fix potential future errors, improve QOL in qualy on mobile.

--- a/RaceResultsBlazor.App/Pages/ClassQualifying.razor.css
+++ b/RaceResultsBlazor.App/Pages/ClassQualifying.razor.css
@@ -2,7 +2,7 @@
     background-size: cover;
     display: flex;
     justify-content: center;
-    padding: 4px 0px;
+    padding: 32px 8px;
     align-items: center;
 }
 
